# binaryninja-mcp

./: CHANGELOG.md  README.md  README.zh.md  __init__.py  plugin.json  pyproject.toml  requiements.txt
.github/workflows/: ci.yml  release.yml
src/binaryninja_mcp/: __init__.py  cli.py  consts.py  log.py  plugin.py  resources.py  server.py  tools.py  utils.py
tests/: conftest.py  smoke_test.py  test_mcp_tools.py  test_tools.py
tests/__snapshots__/: test_mcp_tools.ambr  test_tools.ambr
tests/binary/: beleaf.elf.bndb
